[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/Menu/options_menu.gd" type="Script" id=3]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BackButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -15.0
margin_right = 58.0
margin_bottom = 16.0
rect_scale = Vector2( 2, 2 )
text = "BACK"

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.5
margin_top = -151.0
margin_right = 98.5
margin_bottom = 151.0

[node name="AudioOptions" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 197.0
margin_bottom = 128.0

[node name="AudioTitleLabel" type="Label" parent="HBoxContainer/AudioOptions"]
margin_right = 197.0
margin_bottom = 14.0
text = "AUDIO"
align = 1

[node name="MasterLabel" type="Label" parent="HBoxContainer/AudioOptions"]
margin_top = 18.0
margin_right = 197.0
margin_bottom = 32.0
text = "Master"

[node name="MasterSlider" type="HSlider" parent="HBoxContainer/AudioOptions"]
margin_top = 36.0
margin_right = 197.0
margin_bottom = 52.0
max_value = 1.0
step = 0.001
tick_count = 10
ticks_on_borders = true

[node name="MusicLabel" type="Label" parent="HBoxContainer/AudioOptions"]
margin_top = 56.0
margin_right = 197.0
margin_bottom = 70.0
text = "Music"

[node name="MusicSlider" type="HSlider" parent="HBoxContainer/AudioOptions"]
margin_top = 74.0
margin_right = 197.0
margin_bottom = 90.0
max_value = 1.0
step = 0.001
tick_count = 10
ticks_on_borders = true

[node name="EffectsLabel" type="Label" parent="HBoxContainer/AudioOptions"]
margin_top = 94.0
margin_right = 197.0
margin_bottom = 108.0
text = "Effects"

[node name="EffectsSlider" type="HSlider" parent="HBoxContainer/AudioOptions"]
margin_top = 112.0
margin_right = 197.0
margin_bottom = 128.0
max_value = 1.0
step = 0.001
tick_count = 10
ticks_on_borders = true

[node name="ScreenOptions" type="VBoxContainer" parent="HBoxContainer"]
margin_top = 132.0
margin_right = 197.0
margin_bottom = 215.0

[node name="ScreenTitelLabel" type="Label" parent="HBoxContainer/ScreenOptions"]
margin_right = 197.0
margin_bottom = 31.0
text = "
SCREEN"
align = 1

[node name="CheckboxContainer" type="HBoxContainer" parent="HBoxContainer/ScreenOptions"]
margin_top = 35.0
margin_right = 197.0
margin_bottom = 59.0

[node name="FullscreenCheckbox" type="CheckBox" parent="HBoxContainer/ScreenOptions/CheckboxContainer"]
margin_right = 94.0
margin_bottom = 24.0
text = "Fullscreen"
align = 1

[node name="BoderlessCheckbox" type="CheckBox" parent="HBoxContainer/ScreenOptions/CheckboxContainer"]
margin_left = 98.0
margin_right = 195.0
margin_bottom = 24.0
text = "Borderless"
align = 1

[node name="ResolutionOptions" type="OptionButton" parent="HBoxContainer/ScreenOptions"]
margin_top = 63.0
margin_right = 197.0
margin_bottom = 83.0
text = "RESOLUTION"
align = 1

[node name="SaveOptions" type="VBoxContainer" parent="HBoxContainer"]
margin_top = 219.0
margin_right = 197.0
margin_bottom = 302.0

[node name="SaveTitleLabel" type="Label" parent="HBoxContainer/SaveOptions"]
margin_right = 197.0
margin_bottom = 31.0
text = "
SAVE"
align = 1

[node name="DeleteSaveCheckbox" type="CheckBox" parent="HBoxContainer/SaveOptions"]
margin_top = 35.0
margin_right = 197.0
margin_bottom = 59.0
text = "I dont want my data"
align = 1

[node name="DeleteSaveButton" type="Button" parent="HBoxContainer/SaveOptions"]
margin_top = 63.0
margin_right = 197.0
margin_bottom = 83.0
disabled = true
text = "DELETE ALL DATA"

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="value_changed" from="HBoxContainer/AudioOptions/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/AudioOptions/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/AudioOptions/EffectsSlider" to="." method="_on_EffectsSlider_value_changed"]
[connection signal="toggled" from="HBoxContainer/ScreenOptions/CheckboxContainer/FullscreenCheckbox" to="." method="_on_FullscreenCheckbox_toggled"]
[connection signal="toggled" from="HBoxContainer/ScreenOptions/CheckboxContainer/BoderlessCheckbox" to="." method="_on_BoderlessCheckbox_toggled"]
[connection signal="item_selected" from="HBoxContainer/ScreenOptions/ResolutionOptions" to="." method="_on_ResolutionOptions_item_selected"]
[connection signal="toggled" from="HBoxContainer/SaveOptions/DeleteSaveCheckbox" to="." method="_on_DeleteSaveCheckbox_toggled"]
[connection signal="pressed" from="HBoxContainer/SaveOptions/DeleteSaveButton" to="." method="_on_DeleteSaveButton_pressed"]
